--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:supportsRtl="true"
             android:theme="@style/DarkTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".CalculatorActivity"
+        <activity android:name=".StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".CalculatorActivityGB"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+                android:name=".CalculatorActivityL"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
