--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
         </activity>
         <activity
                 android:name=".CalculatorActivityGB"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
                 android:name=".CalculatorActivityL"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
