--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".CalculatorActivityGB"
+                android:name=".view.CalculatorActivityGB"
                 android:screenOrientation="portrait"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
-                android:name=".CalculatorActivityL"
+                android:name=".view.CalculatorActivityL"
                 android:screenOrientation="portrait"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="stateAlwaysHidden" />
